--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.6.2",
+    "prisma": "^4.15.0",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3"
   },
@@ -34,6 +35,7 @@
     }
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "fastify": "^4.18.0"
   }
 }
