--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     }
   },
   "dependencies": {
+    "@fastify/multipart": "^7.6.1",
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "fastify": "^4.18.0",
