--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@fastify/multipart": "^7.6.1",
+    "@fastify/static": "^6.10.2",
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "fastify": "^4.18.0",
