--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     }
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.6.1",
     "@fastify/static": "^6.10.2",
     "@prisma/client": "^4.15.0",
