--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.3.0",
+    "@fastify/jwt": "^7.0.0",
     "@fastify/multipart": "^7.6.1",
     "@fastify/static": "^6.10.2",
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "fastify": "^4.18.0",
+    "fastify-plugin": "^4.5.0",
     "zod": "^3.21.4"
   }
 }
