--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@fastify/static": "^6.10.2",
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
+    "date-fns": "^2.30.0",
     "fastify": "^4.18.0",
     "fastify-plugin": "^4.5.0",
     "zod": "^3.21.4"
